recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:11: error: identifier expected but ']' found.
return tableau[]
               ^butLast:12: error: ']' expected but '}' found.
}
^